tests/baselines/reference/allowSyntheticDefaultImportsCanPaintCrossModuleDeclaration.errors.txt
color.ts(4,16): error TS2693: 'Color' only refers to a type, but is being used as a value here.


==== color.ts (1 errors) ====
    interface Color {
        c: string;
    }
    export default Color;
                   ~~~~~
!!! error TS2693: 'Color' only refers to a type, but is being used as a value here.
==== file1.ts (0 errors) ====
    import Color from "./color";
    export declare function styled(): Color;
==== file2.ts (0 errors) ====
    import { styled }  from "./file1";
    export const A = styled();